test: Upgrade jsdom and fix fixtures - can not longer use template tag

--- a/test/fixtures/browser/livereload/expected.html
+++ b/test/fixtures/browser/livereload/expected.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<template id="source"><div>changed by live reload server</div></template>
+<div id="source"><div>changed by live reload server</div></div>
 </body>
 </html>
