--- a/test/fixtures/browser/update/expected.html
+++ b/test/fixtures/browser/update/expected.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<template id="source"><span>barfoo</span></template>
+<div id="source"><span>barfoo</span></div>
 </body>
 </html>
