--- a/test/fixtures/browser/insert/expected.html
+++ b/test/fixtures/browser/insert/expected.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<template id="source"><div>foobar</div></template>
+<div id="source"><div>foobar</div></div>
 </body>
 </html>
