--- a/test/fixtures/browser/tostring/expected.html
+++ b/test/fixtures/browser/tostring/expected.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<template id="source">Source is: <div>foobar</div></template>
+<div id="source">Source is: <div>foobar</div></div>
 </body>
 </html>
